# generation_memory_bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/demo_replay/: sample_story.replay.json
data/transcripts/: sample_story.json
docs/: product-brief.md
scripts/: gen_demo_replay.py
src/narrator_flow/: app.py  flow.py  llm_compat.py  main.py  state.py  streaming.py
src/narrator_flow/crews/anchor_crew/: anchor_crew.py
src/narrator_flow/crews/anchor_crew/config/: agents.yaml  tasks.yaml
src/narrator_flow/crews/background_crew/: background_crew.py
src/narrator_flow/crews/background_crew/config/: agents.yaml  tasks.yaml
src/narrator_flow/crews/timeline_crew/: timeline_crew.py
src/narrator_flow/crews/timeline_crew/config/: agents.yaml  tasks.yaml
src/narrator_flow/streaming_app/: __init__.py  analyzer.py  asr.py  coalescing_queue.py  fact_checker.py  live_capture.py  llm_client.py  producer.py  replay.py  run_stream.py  session.py  session_store.py  wikipedia_tool.py  worker.py
src/narrator_flow/tools/: image_gen_tool.py
