[project]
name = "narrator-flow"
version = "0.1.0"
description = "口述史实时分析 Agent (CrewAI Flows demo)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai>=1.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

# 真实 ASR（语音识别）为可选附加项：只有需要把音频转文字的人才安装，
# 不强加给"只看文本 demo / 免 key 演示"的轻量用户。
# 安装：pip install -e ".[asr]"
[project.optional-dependencies]
asr = [
    "faster-whisper>=1.0",
]
# 实时通话模式（连续本机麦克风）：用开源库 RealtimeSTT（内含 VAD + faster-whisper）。
# 抓的是运行机器的本机麦，适合本地 demo。安装：pip install -e ".[live]"
# macOS 还需先 `brew install portaudio`（pyaudio 依赖）。
live = [
    "RealtimeSTT>=0.3",
]

[project.scripts]
narrator_flow = "narrator_flow.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
